Game is 100% playable

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <body>
     <canvas id="canvas" width="480" height="320"></canvas>
     <pre id="debug"></pre>
+    <button id="button">Start game</button>
     <script src="index.js" charset="utf-8"></script>
   </body>
 </html>
