--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <canvas id="canvas" width="480" height="320"></canvas>
     <pre id="debug"></pre>
     <button id="button">Start game</button>
+    <input type="checkbox" id="pluginToggle">
+    <label for="pluginToggle">Use AI plugin?</label>
     <script src="index.js" charset="utf-8"></script>
   </body>
 </html>
