--- a/src/index.html
+++ b/src/index.html
@@ -29,5 +29,6 @@
       <button id="button">Start game</button>
       <input type="checkbox" id="pluginToggle">
       <label for="pluginToggle">Use AI plugin?</label>
+      <pre id="solver"></pre>
     </body>
 </html>
